refactor to separate data initialization from drawing logic

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <!-- data -->
     <script src="data/clues-and-questions.js"></script>
 
+    <!-- utilities -->
+    <script src="js/utils/random-utils.js"></script>
+
     <!-- application code -->
     <script src="js/hangman.js"></script>
 
