added more categories and words and changed name of file

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
 
     <!-- data -->
-    <script src="data/clues-and-questions.js"></script>
+    <script src="data/categorised-words.js"></script>
 
     <!-- utilities -->
     <script src="js/utils/random-utils.js"></script>
