created function to create buttons

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
     <!-- utilities -->
     <script src="js/utils/random-utils.js"></script>
+    <script src="js/utils/element-utils.js"></script>
+
 
     <!-- application code -->
     <script src="js/hangman.js"></script>
