--- a/index.html
+++ b/index.html
@@ -51,29 +51,29 @@
               d="m 220,25 v 55"
               id="path4534"/>
             <circle
-              id="guess1"
+              guess="1"
               cx="220"
               cy="115"
               r="35"
               style="opacity:0"/>
             <path
               d="m 220,150 v 115"
-              id="guess2"
+              guess="2"
               style="opacity:0"/>
             <path
               d="m 220,265 40,40"
-              id="guess5"
+              guess="5"
               style="opacity:0"/>
             <path
               d="m 220,265 -40,40"
-              id="guess6"
+              guess="6"
               style="opacity:0"/>
             <path
-              id="guess3"
+              guess="3"
               d="m 220,170 40,40"
               style="opacity:0"/>
             <path
-              id="guess4"
+              guess="4"
               d="m 220,170 -40,40"
               style="opacity:0"/>
           </g>
